--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reuben Hu</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    
+
+<div class="container-fluid text-center p-4 text-black" style="background-color: #ffe0ae;">
+    <img class="w-5" src="https://www.gravatar.com/avatar/dc395847407ec8ee7502afabce879c4c?s=512">
+</div>
+
 </body>
 </html>
