--- a/index.html
+++ b/index.html
@@ -2,17 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reuben Hu</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Plus+Jakarta+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
+    <section class="introduction">
+        <div class="content">
+            <div class="name">
+                <img src="images/rubenhu.jpeg">
 
-<div class="container-fluid text-center p-4 text-black" style="background-color: #ffe0ae;">
-    <img class="w-5" src="https://www.gravatar.com/avatar/dc395847407ec8ee7502afabce879c4c?s=512">
-</div>
+                <h1>Reuben Hu.</h1>
+                <h2>Not a Professional, Just a Curious Dumbass.</h2>
 
+                <div class="sociallink">
+                    <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com"></a>
+                    <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank"></a>
+                    <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank"></a>
+                    <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank"></a>
+                    <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw" target="_blank"></a>
+                    <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank"></a>
+                </div>
+                
+                <h6>Let's ignore the fact that Arthur MacTavish is my pseudoname.</h6>
+            </div>  
+        </div>
+              
+    </section>
 </body>
 </html>
