--- a/index.html
+++ b/index.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reuben Hu</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Plus+Jakarta+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Plus+Jakarta+Sans&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
+
 <body>
     <section class="introduction">
         <div class="content">
-            <div class="name">
-                <img src="images/rubenhu.jpeg">
+            <img src="images/rubenhu.jpeg">
 
-                <h1>Reuben Hu.</h1>
-                <h2>Not a Professional, Just a Curious Dumbass.</h2>
+            <h1>Reuben Hu.</h1>
+            <h2>Not a Professional, Just a Curious Dumbass.</h2>
 
-                <div class="sociallink">
-                    <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com"></a>
-                    <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank"></a>
-                    <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank"></a>
-                    <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank"></a>
-                    <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw" target="_blank"></a>
-                    <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank"></a>
-                </div>
-                
-                <h6>Let's ignore the fact that Arthur MacTavish is my pseudoname.</h6>
-            </div>  
+            <div class="sociallink">
+                <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com"></a>
+                <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank"></a>
+                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank"></a>
+                <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank"></a>
+                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw"
+                    target="_blank"></a>
+                <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank"></a>
+            </div>
+
+            <h6>Let's ignore the fact that Arthur MacTavish is my pseudoname.</h6>
         </div>
-              
+    </section>
+    <section class="who-m-i">
+        <div class="content">
+            <h1>Meet, Reuben (or Arthur?)</h1>
+            <ul>
+                <li>A Zoomers (2007 kid.)</li>
+                <li>Favourite Colour: Beige, Blue and Red.</li>
+                <li>An Indonesian.</li>
+                <li>Ain't the smartest, nor the stupidest person.</li>
+                <li>I Hate Math.</li>
+            </ul>
+        </div>
     </section>
 </body>
+
 </html>
