Under Construction page add

--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -9,18 +9,16 @@
         rel="stylesheet">
     <link rel="stylesheet" href="/css/404.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-    <meta http-equiv="refresh" content="5;url=/" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <title>Page not found!</title>
+    <title>Under Construction</title>
 </head>
 <body>
     <div class="notfound">
         <div class="texts">
-            <h3>404 - PAGE NOT FOUND / A MESSAGE FROM OUR SPONSOR:</h3>
+            <h3>UNDER CONSTRUCTION / A MESSAGE FROM OUR SPONSOR:</h3>
             <h1 id="quotesContent"><a id="quotesLink" href="/" target="_self">Unable to fetch quotes, please try again later.</a></h1>
             <h3 id="quotesName">Arthur MacTavish</h3>
         </div>
-        <h6 id="timer">You will be redirected in 5 seconds.</h6>
     </div>
     <script src="/js/404.js"></script>
 </body>
