--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
 <body>
@@ -43,7 +44,13 @@
                 <li>An Indonesian.</li>
                 <li>Ain't the smartest, nor the stupidest person.</li>
                 <li>I Hate Math.</li>
+                <li>I Love Tech, <a href="/comingsoon">here's why.</a></li>
             </ul>
+        </div>
+    </section>
+    <section class="support">
+        <div class="content">
+            <h1>Support me!</h1>
         </div>
     </section>
 </body>
