Adding Support Section, and more.

--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,14 +13,17 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Under Construction</title>
 </head>
+
 <body>
     <div class="notfound">
         <div class="texts">
             <h3>UNDER CONSTRUCTION / A MESSAGE FROM OUR SPONSOR:</h3>
-            <h1 id="quotesContent"><a id="quotesLink" href="/" target="_self">Unable to fetch quotes, please try again later.</a></h1>
+            <h1 id="quotesContent"><a id="quotesLink" href="/" target="_self">Unable to fetch quotes, please try again
+                    later.</a></h1>
             <h3 id="quotesName">Arthur MacTavish</h3>
         </div>
     </div>
     <script src="/js/404.js"></script>
 </body>
+
 </html>
