--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
     <section class="support">
         <div class="content">
             <h1>Support me!</h1>
+            <div class="support-links">
+                <button class="trakteer" type="button" style="margin-right: 24px;">
+                    <h2>Trakteer</h2>
+                    <h5>Indonesian Only</h5>
+                </button>
+                <button class="paypal" type="button">
+                    <h2>PayPal</h2>
+                    <h5>International</h5>
+                </button>
+            </div>
         </div>
     </section>
 </body>
