--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,15 +14,18 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Page not found!</title>
 </head>
+
 <body>
     <div class="notfound">
         <div class="texts">
             <h3>404 - PAGE NOT FOUND / A MESSAGE FROM OUR SPONSOR:</h3>
-            <h1 id="quotesContent"><a id="quotesLink" href="/" target="_self">Unable to fetch quotes, please try again later.</a></h1>
+            <h1 id="quotesContent"><a id="quotesLink" href="/" target="_self">Unable to fetch quotes, please try again
+                    later.</a></h1>
             <h3 id="quotesName">Arthur MacTavish</h3>
         </div>
         <h6 id="timer">You will be redirected in 5 seconds.</h6>
     </div>
     <script src="/js/404.js"></script>
 </body>
+
 </html>
