Adding some quotes and Homepage almost finished.

--- a/index.html
+++ b/index.html
@@ -52,15 +52,24 @@
         <div class="content">
             <h1>Support me!</h1>
             <div class="support-links">
-                <button class="trakteer" type="button" style="margin-right: 24px;">
-                    <h2>Trakteer</h2>
-                    <h5>Indonesian Only</h5>
-                </button>
-                <button class="paypal" type="button">
-                    <h2>PayPal</h2>
-                    <h5>International</h5>
-                </button>
+                <a href="https://trakteer.id/rubenwh.id@gmail.com" target="_blank">
+                    <button class="trakteer" type="button" style="margin-right: 24px;">
+                        <h2>Trakteer</h2>
+                        <h5>Indonesian Only</h5>
+                    </button>
+                </a>
+                <a href="https://paypal.me/reubenhu" target="_blank">
+                    <button class="paypal" type="button">
+                        <h2>PayPal</h2>
+                        <h5>International</h5>
+                    </button>
+                </a>
             </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="content">
+            <h1>Terima Kasih (Thank You) for visiting!</h1>
         </div>
     </section>
 </body>
