Fixed directory structure!

--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Plus+Jakarta+Sans&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/404.css">
+    <link rel="stylesheet" href="/assets/css/404.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Under Construction</title>
@@ -23,7 +23,7 @@
             <h3 id="quotesName">Arthur MacTavish</h3>
         </div>
     </div>
-    <script src="/js/404.js"></script>
+    <script src="/assets/js/404.js"></script>
 </body>
 
 </html>
