--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/404.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <meta http-equiv="refresh" content="5;url=/" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <title>Page not found!</title>
 </head>
 
@@ -25,7 +25,7 @@
         </div>
         <h6 id="timer">You will be redirected in 5 seconds.</h6>
     </div>
-    <script src="/js/404.js"></script>
+    <script src="/assets/js/404.js"></script>
 </body>
 
 </html>
