--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Plus+Jakarta+Sans&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
@@ -17,7 +17,7 @@
 <body>
     <section class="introduction">
         <div class="content">
-            <img src="images/rubenhu.jpeg">
+            <img src="/assets/images/rubenhu.jpeg">
 
             <h1>Reuben Hu.</h1>
             <h2>Not a Professional, Just a Curious Dumbass.</h2>
@@ -53,7 +53,7 @@
             <h1>Support me!</h1>
             <div class="support-links">
                 <a href="https://trakteer.id/rubenwh.id@gmail.com" target="_blank">
-                    <button class="trakteer" type="button" style="margin-right: 24px;">
+                    <button class="trakteer" type="button">
                         <h2>Trakteer</h2>
                         <h5>Indonesian Only</h5>
                     </button>
@@ -70,6 +70,28 @@
     <section class="footer">
         <div class="content">
             <h1>Terima Kasih (Thank You) for visiting!</h1>
+            <h2>Visit me at:</h2>
+            <div class="sociallink">
+                <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com"></a>
+                <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank"></a>
+                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank"></a>
+                <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank"></a>
+                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw"
+                    target="_blank"></a>
+                <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank"></a>
+            </div>
+
+            <h2>or check things related to the site creation:</h2>
+            <div class="sociallink">
+                <a class="bi bi-journal-code" href="https://github.com/ArthurMacTavish/ArthurMacTavish.github.io/" target="_blank"></a>
+                <a class="bi bi-palette2" href="https://coolors.co/f5f5dc-ffffc8-f0ffad-b1ff84-afdcff-ffbac2" target="_blank"></a>
+                <a class="bi bi-filetype-js" href="https://jquery.com/" target="_blank"></a>
+                <a class="bi bi-bootstrap" href="https://icons.getbootstrap.com/" target="_blank"></a>
+                <a class="bi bi-stack-overflow" href="https://stackoverflow.com/" target="_blank"></a>
+                <a class="bi bi-robot" href="https://chat.openai.com/" target="_blank"></a>
+            </div>
+
+            <h5>Hosted in GitHub Pages.</h5>
         </div>
     </section>
 </body>
