Phew, the homepage is finished!

--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
 <body>
     <section class="introduction">
         <div class="content">
-            <img src="/assets/images/rubenhu.jpeg">
+            <img src="/assets/images/rubenhu.jpeg" alt="My face." title="M Y . F A C E .">
 
             <h1>Reuben Hu.</h1>
             <h2>Not a Professional, Just a Curious Dumbass.</h2>
 
             <div class="sociallink">
-                <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com"></a>
-                <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank"></a>
-                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank"></a>
-                <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank"></a>
-                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw"
-                    target="_blank"></a>
-                <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank"></a>
+                <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com" title="Email"></a>
+                <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank" title="Instagram"></a>
+                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank" title="X (formerly Twitter)"></a>
+                <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank" title="GitHub"></a>
+                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw" title="YouTube" target="_blank"></a>
+                <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank" title="Unsplash"></a>
             </div>
 
             <h6>Let's ignore the fact that Arthur MacTavish is my pseudoname.</h6>
@@ -72,26 +71,26 @@
             <h1>Terima Kasih (Thank You) for visiting!</h1>
             <h2>Visit me at:</h2>
             <div class="sociallink">
-                <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com"></a>
-                <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank"></a>
-                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank"></a>
-                <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank"></a>
-                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw"
-                    target="_blank"></a>
-                <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank"></a>
+                <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com" title="Email"></a>
+                <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank" title="Instagram"></a>
+                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank" title="X (formerly Twitter)"></a>
+                <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank" title="GitHub"></a>
+                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw" title="YouTube" target="_blank"></a>
+                <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank" title="Unsplash"></a>
             </div>
 
             <h2>or check things related to the site creation:</h2>
             <div class="sociallink">
-                <a class="bi bi-journal-code" href="https://github.com/ArthurMacTavish/ArthurMacTavish.github.io/" target="_blank"></a>
-                <a class="bi bi-palette2" href="https://coolors.co/f5f5dc-ffffc8-f0ffad-b1ff84-afdcff-ffbac2" target="_blank"></a>
-                <a class="bi bi-filetype-js" href="https://jquery.com/" target="_blank"></a>
-                <a class="bi bi-bootstrap" href="https://icons.getbootstrap.com/" target="_blank"></a>
-                <a class="bi bi-stack-overflow" href="https://stackoverflow.com/" target="_blank"></a>
-                <a class="bi bi-robot" href="https://chat.openai.com/" target="_blank"></a>
+                <a class="bi bi-journal-code" href="https://github.com/ArthurMacTavish/ArthurMacTavish.github.io/" target="_blank" title="Source Code (GitHub Pages)"></a>
+                <a class="bi bi-palette2" href="https://coolors.co/f5f5dc-ffffc8-f0ffad-b1ff84-afdcff-ffbac2" target="_blank" title="Colour Palette (Coolors)"></a>
+                <a class="bi bi-filetype-js" href="https://jquery.com/" target="_blank" title="JQuery"></a>
+                <a class="bi bi-bootstrap" href="https://icons.getbootstrap.com/" target="_blank" title="Bootstrap Icons"></a>
+                <a class="bi bi-stack-overflow" href="https://stackoverflow.com/" target="_blank" title="Stack Overflow"></a>
+                <a class="bi bi-robot" href="https://chat.openai.com/" target="_blank" title="OpenAI ChatGPT"></a>
+                <a class="bi bi-stars" href="https://bard.google.com/" target="_blank" title="Google Bard"></a>
             </div>
 
-            <h5>Hosted in GitHub Pages.</h5>
+            <h5>Hosted with GitHub Pages.</h5>
         </div>
     </section>
 </body>
