--- a/404.html
+++ b/404.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Plus+Jakarta+Sans&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/404.css">
+    <link rel="stylesheet" href="/assets/css/404.css">
+    <link rel="stylesheet" href="/assets/css/mobile/404.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <meta http-equiv="refresh" content="5;url=/" />
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
@@ -23,8 +24,8 @@
                     later.</a></h1>
             <h3 id="quotesName">Arthur MacTavish</h3>
         </div>
-        <h6 id="timer">You will be redirected in 5 seconds.</h6>
     </div>
+    <h6 id="timer">You will be redirected in 5 seconds.</h6>
     <script src="/assets/js/404.js"></script>
 </body>
 
