--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Plus+Jakarta+Sans&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/404.css">
+    <link rel="stylesheet" href="/assets/css/mobile/404.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Under Construction</title>
