--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Plus+Jakarta+Sans&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="stylesheet" href="/assets/css/mobile/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
@@ -25,9 +26,11 @@
             <div class="sociallink">
                 <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com" title="Email"></a>
                 <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank" title="Instagram"></a>
-                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank" title="X (formerly Twitter)"></a>
+                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank"
+                    title="X (formerly Twitter)"></a>
                 <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank" title="GitHub"></a>
-                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw" title="YouTube" target="_blank"></a>
+                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw" title="YouTube"
+                    target="_blank"></a>
                 <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank" title="Unsplash"></a>
             </div>
 
@@ -73,19 +76,25 @@
             <div class="sociallink">
                 <a class="bi bi-envelope" href="MAILTO:ArthurMacTavish@outlook.com" title="Email"></a>
                 <a class="bi bi-instagram" href="https://instagram.com/reuben.hu" target="_blank" title="Instagram"></a>
-                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank" title="X (formerly Twitter)"></a>
+                <a class="bi bi-twitter-x" href="https://x.com/ArthurMacTavish" target="_blank"
+                    title="X (formerly Twitter)"></a>
                 <a class="bi bi-github" href="https://github.com/ArthurMacTavish" target="_blank" title="GitHub"></a>
-                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw" title="YouTube" target="_blank"></a>
+                <a class="bi bi-youtube" href="https://youtube.com/channel/UC0NEoLavXz8y5Y_rVu6qZAw" title="YouTube"
+                    target="_blank"></a>
                 <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank" title="Unsplash"></a>
             </div>
 
             <h2>or check things related to the site creation:</h2>
             <div class="sociallink">
-                <a class="bi bi-journal-code" href="https://github.com/ArthurMacTavish/ArthurMacTavish.github.io/" target="_blank" title="Source Code (GitHub Pages)"></a>
-                <a class="bi bi-palette2" href="https://coolors.co/f5f5dc-ffffc8-f0ffad-b1ff84-afdcff-ffbac2" target="_blank" title="Colour Palette (Coolors)"></a>
+                <a class="bi bi-journal-code" href="https://github.com/ArthurMacTavish/ArthurMacTavish.github.io/"
+                    target="_blank" title="Source Code (GitHub Pages)"></a>
+                <a class="bi bi-palette2" href="https://coolors.co/f5f5dc-ffffc8-f0ffad-b1ff84-afdcff-ffbac2"
+                    target="_blank" title="Colour Palette (Coolors)"></a>
                 <a class="bi bi-filetype-js" href="https://jquery.com/" target="_blank" title="JQuery"></a>
-                <a class="bi bi-bootstrap" href="https://icons.getbootstrap.com/" target="_blank" title="Bootstrap Icons"></a>
-                <a class="bi bi-stack-overflow" href="https://stackoverflow.com/" target="_blank" title="Stack Overflow"></a>
+                <a class="bi bi-bootstrap" href="https://icons.getbootstrap.com/" target="_blank"
+                    title="Bootstrap Icons"></a>
+                <a class="bi bi-stack-overflow" href="https://stackoverflow.com/" target="_blank"
+                    title="Stack Overflow"></a>
                 <a class="bi bi-robot" href="https://chat.openai.com/" target="_blank" title="OpenAI ChatGPT"></a>
                 <a class="bi bi-stars" href="https://bard.google.com/" target="_blank" title="Google Bard"></a>
             </div>
