--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <header>
-    </header>
+    <!-- <header>
+    </header> -->
     <main>
         <section class="introduction">
             <div class="content">
@@ -37,6 +37,9 @@
                     <a class="bi bi-images" href="https://unsplash.com/reuben_hu" target="_blank" title="Unsplash"></a>
                 </div>
     
+                <a href="https://unsplash.com/photos/a-view-of-trees-and-a-building-in-the-distance-gFsakRAStIo" target="_blank">
+                    <h3>Image Source: Unsplash / Reuben Hu / Palembang During Haze</h3>
+                </a>
                 <h6>Let's ignore the fact that Arthur MacTavish is my pseudoname.</h6>
             </div>
         </section>
